discussion/kv_engine/175331/175331_rev18_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Cancel RangeScans that exist for "too long"

A RangeScan cannot 'exist' indefinitely as disk cannot be released by
compaction. This commit adds a watch-dog task that is responsible
for 'force' cancelling any RangeScan that exists for longer than some
configuration defined duration (180 seconds by default).

The cancellation task is created per vbucket, with that one task
responsible for waking when a scan would violate the max-duration.
Even if that scan has completed, the task will still wake and check,
with part of that check being to update the sleep of the task to
forever or the next expected "violation" of the max-duration.

Change-Id: I409b00ab08772fa36af8f2fad83c0b083fe26165

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-12 13:29:06.000000000
Message: 
Patch Set 18: Patch Set 17 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-12 13:33:40.000000000
Message: 
Patch Set 18: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40588/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40588/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9112/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9112/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22432/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22432/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22432/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21359/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21359/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21710/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21710/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20608/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20608/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29736/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29736/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9209/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9209/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18634/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/module_tests/range_scan_test.cc b/engines/ep/tests/module_tests/range_scan_test.cc
index c902b8036..16f77437d 100644
--- a/engines/ep/tests/module_tests/range_scan_test.cc
+++ b/engines/ep/tests/module_tests/range_scan_test.cc
@@ -1636,7 +1636,6 @@ public:
         EXPECT_TRUE(vb);
         return static_cast&lt;EPVBucket&amp;&gt;(*vb);
     }
-
 };
 
 TEST_F(RangeScanOwnerTest, cancelRangeScansExceedingDuration) {

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18634/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19422/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:115:23: error: member access into incomplete type "EPVBucket" [clang-diagnostic-error]
          vbid(vBucket.getId()) {
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:29:7: note: forward declaration of "EPVBucket"
class EPVBucket;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:131:16: error: member access into incomplete type "EPVBucket" [clang-diagnostic-error]
        vBucket.cancelRangeScansExceedingDuration(std::chrono::seconds(
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:29:7: note: forward declaration of "EPVBucket"
class EPVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19422/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:115:23:
error: member access into incomplete type "EPVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19422/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48314/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48314/ )
----------------------------------------------------------------------------------------------------------------------
